package main.java.exceptions;

public interface ValidationFunctor {
    void execute() throws ValidationException;
}
